k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: "0.2"
            memory: 300Mi
          limits:
            cpu: "1.0"
            memory: 300Mi
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 50
          timeoutSeconds: 2
          periodSeconds: 20
          failureThreshold: 5
        livenessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 50
          timeoutSeconds: 2
          periodSeconds: 20
          failureThreshold: 5
      serviceAccountName: api-service-account
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  ports:
  - port: 3306
    protocol: TCP
  selector:
    app: mysql
