k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: vmware/user:1.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.2"
              memory: 300Mi
            limits:
              cpu: "1.0"
              memory: 300Mi
          volumeMounts:
            - name: mysql
              mountPath: /etc/secretspot
      volumes:
        - name: mysql
          secret:
            secretName: user
      serviceAccountName: api-service-account
---
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: user
  type: NodePort
